- [#MODX-1783] Unnecessary scrollbars Fixed unnecessary scrollbar bug by removing unnecessary margin on body/html tags

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -3,7 +3,6 @@
  */
 body, html {
     height: 100%;
-    margin-bottom: 1px;
 }
 body {
     margin-bottom: 1px; /* avoid jumping scrollbars */
